Add functionality to delete comments

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,3 +8,9 @@
   <%= comment.body %>
 </p>
 
+<p>
+  <%= link_to "Delete comment", [comment.article, comment],
+              method: :delete,
+              data: { confirm: "Are you sure?" } %>
+</p>
+
