--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,1 +1,3 @@
-@import "bulma/bulma"
+@import "bulma/bulma";
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Tangerine:wght@700&display=swap');
+@import "navbar.scss"
