Add main container

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
   <body>
     <%= render "layouts/navbar" %>
-    <%= yield %>
+    <div id="main-container" class="container is-max-desktop">
+      <%= yield %>
+    </div>
   </body>
 </html>
