--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,7 @@
 @import "bulma/bulma";
 @import url('https://fonts.googleapis.com/css2?family=Raleway&family=Tangerine:wght@700&display=swap');
-@import "navbar.scss"
+@import "navbar.scss";
+
+#main-container {
+  margin-top: 30px;
+}
