Style the articles page

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,12 +1,14 @@
-<h1>Articles</h1>
-<p>Our blog has <%= Article.public_count%> articles and counting!</p>
-
-<ul>
-  <% @articles.each do |article| %>
-    <li>
-      <%= link_to article.title, article %>
-    </li>
-  <% end %>
-</ul>
-
-<%= link_to "New Article", new_article_path %>
+<section class="section">
+  <h1 class="title is-size-1">Articles</h1>
+  <p class="subtitle is-size-4">Our blog has <%= Article.public_count%> 
+    <%= Article.public_count == 1? "article" : "articles" %> and counting!</p>
+  
+  <ul id="articles-list">
+    <% @articles.each do |article| %>
+      <li class="box is-size-5">
+        <%= link_to article.title, article %>
+      </li>
+    <% end %>
+  </ul>
+  
+</section>
