--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,27 +1,37 @@
-<%= form_with model: article do |form| %>
-  <div>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
+<%= form_with model: article, class: "box" do |form| %>
+  <div class="field">
+    <%= form.label :title, class: "label"%>
+    <div class="control">
+      <%= form.text_field :title, class: "input" %>
+    </div>
     <% article.errors.full_messages_for(:title).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
 
-  <div>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %><br>
+  <div class="field">
+    <%= form.label :body, class: "label" %>
+    <div class="control">
+      <%= form.text_area :body, class: "textarea" %>
+    </div>
     <% article.errors.full_messages_for(:body).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
 
-  <div>
-    <%= form.label :status %><br>
-    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
+  <div class="field">
+    <%= form.label :status, class: "label" %>
+    <div class="control">
+      <div class="select">
+        <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
+      </div>
+    </div>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="field">
+    <div class="control">
+      <%= form.submit class: "button is-link" %>
+    </div>
   </div>
 <% end %>
 
