--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New Article</h1>
-
-<%= render "form", article: @article %>
+<section class="section">
+  <h1 class="title is-size-1">New Article</h1>
+  
+  <%= render "form", article: @article %>
+</section>
