--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,21 +1,33 @@
 <%= form_with model: [ @article, @article.comments.build ] do |form| %>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
-  </p>
+  <div class="box">
+    <div class="field">
+      <%= form.label :commenter, class: "label"%>
+      <div class="control">
+        <%= form.text_field :commenter, class: "input" %>
+      </div>
+    </div>
 
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
+    <div class=:"field">
+      <%= form.label :body, class: "label" %>
+      <div class="control">
+        <%= form.text_area :body, class: "textarea" %>
+      </div>
+    </p>
 
-  <div>
-    <%= form.label :status %><br>
-    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
+    <div class="field">
+      <%= form.label :status, class: "label" %>
+      <div class="control">
+        <div class="select">
+          <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
+        </div>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <%= form.submit class: "button is-link" %>
+      </div> 
+    </div>
   </div>
-
-  <p>
-    <%= form.submit %>
-  </p>
 <% end %>
 
